--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
           <propertyName>google</propertyName>
           </systemPropertyVariables>
           <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>testng1.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
